--- a/Portfolio/src/components/Navbar.css
+++ b/Portfolio/src/components/Navbar.css
@@ -1,16 +1,16 @@
 .Navbar {
     display: flex;
-    flex-direction: column;
-    max-width: 600px;
-    width: 400px;
+    width: 100vw;
     border-right: 2px solid black;
-    height: 100vh;
-    justify-content:center;
-    gap: 70px;
+    min-height: 80px;
     background-color: #131515;
+    justify-content: center;
     color: #faf9f9;
-    align-items: center;
-    position: relative;
+    align-items:center;
+    position: sticky;
+    gap: 70px;
+    top: 0;
+    z-index: 100;
 }
 
 .Navbar button {
@@ -19,9 +19,7 @@
     border:none;
 }
 
-.Navbar img {
-    width: 200px;
-    height: 200px;
+.Navbar h4 {
     position: absolute;
-    top: 35px;
+    left: 15px;
 }
