--- a/src/index.css
+++ b/src/index.css
@@ -15,7 +15,12 @@ body {
     width: 100%;
     height: 100%;
     background-color: #343a40;
+    color: white
 }
+
+body::-webkit-scrollbar {
+    width: 0;
+  }
 
 .content {
     width: 80vw;
@@ -30,7 +35,7 @@ body {
     height: 100vh;
 }
 
-h2 {
+.home p {
     text-transform: uppercase;
     text-align: center;
 }
@@ -43,7 +48,7 @@ h2 {
 
 .navbar {
     display: flex;
-    width: 100vw;
+    width: 100%;
     border-right: 2px solid black;
     min-height: 80px;
     background-color: #131515;
@@ -63,6 +68,7 @@ h2 {
     border:none;
     cursor: pointer;
     font-size: 20px;
+    display: flex;
 }
 
 .icons {
@@ -75,5 +81,20 @@ h2 {
 .skills {
     width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
 }
 
+.skills .hardskills {
+    width: 40vw;
+    height: 300px;
+}
+
+.skills .softskills {
+    width: 40vw;
+    height: 300px;
+}
+
+ul {
+  list-style-type: none;
+}
