--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,8 @@
 body {
     width: 100%;
     height: 100%;
-    background-color: #343a40;
+    background-image: linear-gradient(rgb(2, 41, 79), rgb(9, 14, 16) 30%);
+    background-repeat: no-repeat;
     color: white
 }
 
@@ -38,6 +39,8 @@ body::-webkit-scrollbar {
 .home p {
     text-transform: uppercase;
     text-align: center;
+    font-size: 34px;
+    letter-spacing: 2px;
 }
 
 .home {
@@ -69,6 +72,13 @@ body::-webkit-scrollbar {
     cursor: pointer;
     font-size: 20px;
     display: flex;
+    transition: background-color 0.3s ease;
+    padding: 10px 20px;
+    border-radius: 5px
+}
+
+.navbar button:hover {
+    background-color: rgb(2, 41, 79)
 }
 
 .icons {
@@ -76,11 +86,35 @@ body::-webkit-scrollbar {
   left: 20px;
   display: flex;
   gap: 20px;
+  cursor: pointer;
 }
+
+.icons a {
+    border: 1px solid white;
+    padding: 3px;
+    color: white;
+    background-color: #131515;
+    border-radius: 5px;
+    display: inline-block;
+  position: relative;
+}
+
+
+.icons a :hover {
+    color: black;
+    background-color: white;
+    transform: scale(1);
+}
+
+.icon {
+    display: inline-block;
+    font-size: 24px;
+}
+
 
 .skills {
     width: 100%;
-    height: 100vh;
+    height: 50vh;
     display: flex;
     justify-content: center;
 }
@@ -97,4 +131,9 @@ body::-webkit-scrollbar {
 
 ul {
   list-style-type: none;
+}
+
+.projects {
+    width: 100%;
+    height: 50vh;
 }
