--- a/src/index.css
+++ b/src/index.css
@@ -24,7 +24,7 @@ body::-webkit-scrollbar {
   }
 
 .content {
-    width: 80vw;
+    width: 100vw;
 }
 .about img {
     width: 300px;
@@ -34,6 +34,7 @@ body::-webkit-scrollbar {
 .about {
     width: 100%;
     height: 100vh;
+    border-top: 1px solid #dee2e6;
 }
 
 .home p {
@@ -52,8 +53,7 @@ body::-webkit-scrollbar {
 .navbar {
     display: flex;
     width: 100%;
-    border-right: 2px solid black;
-    min-height: 80px;
+    height: 80px;
     background-color: #131515;
     justify-content: center;
     color: #faf9f9;
@@ -62,7 +62,7 @@ body::-webkit-scrollbar {
     gap: 100px;
     top: 0;
     z-index: 100;
-    border-bottom: 2px solid #dee2e6;
+    border-bottom: 1px solid #dee2e6;
 }
 
 .navbar button {
@@ -74,7 +74,7 @@ body::-webkit-scrollbar {
     display: flex;
     transition: background-color 0.3s ease;
     padding: 10px 20px;
-    border-radius: 5px
+    border-radius: 5px;
 }
 
 .navbar button:hover {
@@ -117,16 +117,18 @@ body::-webkit-scrollbar {
     height: 50vh;
     display: flex;
     justify-content: center;
+    border-top: 1px solid #dee2e6;
 }
 
 .skills .hardskills {
-    width: 40vw;
-    height: 300px;
+    width: 50%;
+    height: 100%;
+    border-right: 1px solid #dee2e6;
 }
 
 .skills .softskills {
-    width: 40vw;
-    height: 300px;
+    width: 50%;
+    height: 100%;
 }
 
 ul {
@@ -136,4 +138,5 @@ ul {
 .projects {
     width: 100%;
     height: 50vh;
+    border-top: 1px solid #dee2e6;
 }
