--- a/src/index.css
+++ b/src/index.css
@@ -112,6 +112,47 @@ body::-webkit-scrollbar {
 }
 
 
+.navbar-toggle {
+    display: none;
+    cursor: pointer;
+    flex-direction: column;
+    justify-content: space-between;
+    width: 30px;
+    height: 20px;
+  }
+  
+  .bar {
+    width: 100%;
+    height: 3px;
+    background-color: #fff;
+  }
+
+  .toggle-menu {
+    position: absolute;
+    display: flex;
+    width: 100%;
+    height: 350px;
+    flex-direction: column;
+    background-color: rgba(0, 0, 0, 0.8);
+    justify-content: center;
+    align-items: center;
+    top: 80px;
+  }
+
+  .toggle-menu li {
+    cursor: pointer;
+    padding: 10px;
+    text-align: center;
+    border-radius: 5px;
+    margin-bottom: 20px;
+  }
+
+  .toggle-menu li:hover {
+    background-color: rgb(2, 41, 79)
+  }
+
+
+
 .skills {
     width: 100%;
     height: 50vh;
@@ -140,3 +181,16 @@ ul {
     height: 50vh;
     border-top: 1px solid #dee2e6;
 }
+
+
+@media only screen and (max-width: 875px) {
+    .navbar button {
+      display: none; /* Menü alapértelmezett rejtése kisebb képernyőméretnél */
+    }
+  
+    .navbar-toggle {
+      display: flex; 
+      position: absolute;
+      right: 15px;
+    }
+  }
