--- a/src/index.css
+++ b/src/index.css
@@ -26,16 +26,6 @@ body::-webkit-scrollbar {
 .content {
     width: 100vw;
 }
-.about img {
-    width: 300px;
-    height: 300px;
-}
-
-.about {
-    width: 100%;
-    height: 100vh;
-    border-top: 1px solid #dee2e6;
-}
 
 .home p {
     text-transform: uppercase;
@@ -57,7 +47,7 @@ body::-webkit-scrollbar {
 .navbar {
     display: flex;
     width: 100%;
-    height: 80px;
+    height: 60px;
     background-color: #131515;
     justify-content: center;
     color: #faf9f9;
@@ -155,6 +145,35 @@ body::-webkit-scrollbar {
     background-color: rgb(2, 41, 79)
   }
 
+  .text img {
+    width: 250px;
+    max-width: 300px;
+    height: 300px;
+}
+
+.about {
+    width: 100%;
+    height: 100vh;
+    border-top: 1px solid #dee2e6;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.text {
+  display: flex;
+  text-align: center;
+  align-items: center;
+  padding: 20px 100px;
+  gap: 30px;
+}
+
+.about h2 {
+  position: absolute;
+  top: 70px;
+}
 
 
 .skills {
@@ -169,6 +188,12 @@ body::-webkit-scrollbar {
     width: 50%;
     height: 100%;
     border-right: 1px solid #dee2e6;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    gap: 150px;
+    font-size: 20px;
 }
 
 .skills .softskills {
@@ -176,8 +201,13 @@ body::-webkit-scrollbar {
     height: 100%;
 }
 
+
 ul {
   list-style-type: none;
+}
+.skill {
+  display: inline-block;
+  margin-right: 10px;
 }
 
 .projects {
