--- a/src/index.css
+++ b/src/index.css
@@ -182,6 +182,7 @@ body::-webkit-scrollbar {
     display: flex;
     justify-content: center;
     border-top: 1px solid #dee2e6;
+    font-size: 24px;
 }
 
 .skills .hardskills {
@@ -193,7 +194,6 @@ body::-webkit-scrollbar {
     justify-content: center;
     flex-direction: column;
     gap: 150px;
-    font-size: 20px;
 }
 
 .skills .softskills {
@@ -207,7 +207,14 @@ ul {
 }
 .skill {
   display: inline-block;
-  margin-right: 10px;
+  margin-right: 25px;
+  text-align: center;
+}
+.skill p {
+  font-size: 10px;
+}
+.skill svg {
+ font-size: 40px;
 }
 
 .projects {
