--- a/src/index.css
+++ b/src/index.css
@@ -33,9 +33,11 @@ body::-webkit-scrollbar {
 .home p {
     text-transform: uppercase;
     text-align: center;
-    font-size: 36px;
+    font-size: 76px;
     letter-spacing: 2px; 
     animation: fadeInUp 5s ease forwards;
+    line-height: 0.8;
+    letter-spacing: 15px;
 }
 
 .home {
@@ -43,6 +45,17 @@ body::-webkit-scrollbar {
     height: 100vh;
     text-align: center; 
     padding: 200px 0;
+    font-family: "Titillium Web", sans-serif;
+    font-weight: 900;
+    color: rgb(2, 41, 79) ;
+}
+
+#name {
+  font-weight: 400;
+  color: rgb(2, 41, 79);
+  font-size: 35px;
+  letter-spacing: 10px;
+  font-style: italic;
 }
 
 .navbar {
@@ -73,7 +86,9 @@ body::-webkit-scrollbar {
 }
 
 .navbar a:hover {
-    background-color: rgb(2, 41, 79)
+    background-color: rgb(2, 41, 79);
+    text-decoration: underline;
+    text-underline-offset: 5px;
 }
 
 .icons {
@@ -114,6 +129,10 @@ body::-webkit-scrollbar {
     justify-content: space-between;
     width: 30px;
     height: 20px;
+  }
+
+  ul {
+    list-style-type: none;
   }
   
   .bar {
@@ -176,20 +195,21 @@ body::-webkit-scrollbar {
 
 .skills {
     width: 100%;
-    height: 50vh;
+    height: 100vh;
     display: flex;
     justify-content: center;
+    flex-direction: column;
     border-top: 1px solid #131515;
     font-size: 24px;
 }
 
-.skills #main {
+ #main {
   position: absolute;
-  top: 30px;
+  top: 40px;
 }
 
-.skills .hardskills {
-    width: 50%;
+ .hardskills {
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -197,10 +217,16 @@ body::-webkit-scrollbar {
     flex-direction: column;
     position: relative;
     gap: 20px;
+    padding-left: 30px;
 }
 
-.skills .softskills {
-    width: 50%;
+ .hardskills ul {
+  height: 200px;
+ padding-top: 70px;
+}
+
+ .softskills {
+    width: 100%;
     height: 100%;
     display: flex;
     align-items: center;
@@ -208,7 +234,23 @@ body::-webkit-scrollbar {
     flex-direction: column;
     position: relative;
 }
+.softskills li {
+  font-size: 18px;
+  margin-bottom: 8px;
+  padding: 10px;
+  border-radius: 5px;
+  background-color: #e9f7fd;
+  box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.1);
+  transition: background-color 0.3s ease;
+}
 
+.softskills li:hover {
+  background-color: #c4e6f7;
+}
+
+ .softskills ul {
+  list-style-type: square;
+}
 
 
 .skill {
@@ -216,16 +258,48 @@ body::-webkit-scrollbar {
   margin-right: 25px;
   text-align: center;
   list-style-type: none;
+  background-color: white;
+  width: 90px;
+  height: 90px;
+  border: 1px solid none;
+  border-radius: 5px;
+  box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.5);
+  transition: transform 1s ease;
 }
-ul {
-  list-style-type: none;
+
+.skill:hover {
+  transform: scale(1.2);
 }
+
 .skill p {
   font-size: 10px;
 }
 .skill svg {
- font-size: 40px;
+ font-size: 60px;
 }
+
+#skill-0 svg{
+  color: #e71d36;
+}
+#skill-1 svg{
+  color: #0466c8;
+}
+#skill-2 svg{
+  color: #fee440;
+}
+#skill-3 svg{
+  color: #00bbf9;
+}
+#skill-5 svg{
+  color: #ff5400;
+}
+#skill-6 svg{
+  color: #ffd500;
+}
+#skill-7 svg{
+  color: #0466c8;
+}
+
 
 .projects {
     width: 100%;
@@ -254,6 +328,8 @@ ul {
       display: block;
     } 
   }
+
+
 
 
 
