--- a/src/index.css
+++ b/src/index.css
@@ -28,6 +28,8 @@ body::-webkit-scrollbar {
 .content {
     width: 100%;
     height: 100%;
+    display: flex;
+    flex-direction: column;
 }
 
 .home p {
@@ -38,6 +40,7 @@ body::-webkit-scrollbar {
     animation: fadeInUp 5s ease forwards;
     line-height: 0.8;
     letter-spacing: 15px;
+    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .home {
@@ -56,6 +59,7 @@ body::-webkit-scrollbar {
   font-size: 35px;
   letter-spacing: 10px;
   font-style: italic;
+  text-shadow: none;
 }
 
 .navbar {
@@ -70,7 +74,7 @@ body::-webkit-scrollbar {
     gap: 100px;
     top: 0;
     z-index: 100;
-    border-bottom: 1px solid #dee2e6;
+    border-bottom: 2px solid white;
 }
 
 .navbar a {
@@ -180,16 +184,17 @@ body::-webkit-scrollbar {
     position: relative;
     gap: 100px;
     flex-wrap: wrap;
+    
 }
 
 .about-text {
-  font-size: 16px;
+  font-size: 22px;
   line-height: 1.8;
   margin-left: 50px;
   padding: 20px; 
   width: 80%;
   max-width: 700px;
-
+  font-weight: 500;
 }
 
 
@@ -203,14 +208,15 @@ body::-webkit-scrollbar {
     font-size: 24px;
 }
 
- #main {
+ .main {
   position: absolute;
-  top: 40px;
+  top: 25px;
 }
+
 
  .hardskills {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -227,7 +233,7 @@ body::-webkit-scrollbar {
 
  .softskills {
     width: 100%;
-    height: 100%;
+    height: 100vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -235,7 +241,7 @@ body::-webkit-scrollbar {
     position: relative;
 }
 .softskills li {
-  font-size: 18px;
+  font-size: 22px;
   margin-bottom: 8px;
   padding: 10px;
   border-radius: 5px;
@@ -249,7 +255,7 @@ body::-webkit-scrollbar {
 }
 
  .softskills ul {
-  list-style-type: square;
+  list-style-type: disc;
 }
 
 
@@ -265,6 +271,7 @@ body::-webkit-scrollbar {
   border-radius: 5px;
   box-shadow: 5px 5px 0px rgba(0, 0, 0, 0.5);
   transition: transform 1s ease;
+  margin-top: 15px;
 }
 
 .skill:hover {
@@ -358,4 +365,38 @@ body::-webkit-scrollbar {
   .hardskills {
     gap: 90px;
   }
+  }
+
+  @media only screen and (max-width: 560px) {
+    .skill {
+      width:60px;
+      height: 60px;
+    }
+
+    .home p {
+      font-size: 50px;
+    }
+    #name {
+      font-size: 25px;
+    }
+
+    .about-text {
+      font-size: 18px;
+    }
+    .softskills li {
+      font-size: 15px;
+      padding: 7px;
+  
+    }
+  }
+
+
+  @media only screen and (max-width: 390px) {
+    .home p {
+      font-size: 40px;
+    }
+    #name {
+      font-size: 20px;
+    }
+
   }
