--- a/src/index.css
+++ b/src/index.css
@@ -73,7 +73,7 @@ body::-webkit-scrollbar {
     position: sticky;
     gap: 100px;
     top: 0;
-    z-index: 100;
+    z-index: 99;
     border-bottom: 2px solid white;
 }
 
@@ -94,6 +94,7 @@ body::-webkit-scrollbar {
     text-decoration: underline;
     text-underline-offset: 5px;
 }
+
 
 .icons {
   position: absolute;
@@ -149,7 +150,7 @@ body::-webkit-scrollbar {
     position: absolute;
     display: flex;
     width: 100%;
-    height: 350px;
+    height: 400px;
     flex-direction: column;
     background-color: rgba(0, 0, 0, 0.8);
     justify-content: center;
@@ -165,9 +166,6 @@ body::-webkit-scrollbar {
     margin-bottom: 20px;
   }
 
-  .toggle-menu li:hover {
-    background-color: rgb(2, 41, 79)
-  }
 
   .about img {
     max-width: 100%;
@@ -211,6 +209,7 @@ body::-webkit-scrollbar {
  .main {
   position: absolute;
   top: 25px;
+  text-decoration: underline;
 }
 
 
@@ -228,7 +227,6 @@ body::-webkit-scrollbar {
 
  .hardskills ul {
   height: 200px;
- padding-top: 70px;
 }
 
  .softskills {
@@ -315,7 +313,7 @@ body::-webkit-scrollbar {
 }
 
 
-@media only screen and (max-width: 875px) {
+@media only screen and (max-width: 1040px) {
     .navbar a {
       display: none; /* Menü alapértelmezett rejtése kisebb képernyőméretnél */
     }
@@ -338,20 +336,16 @@ body::-webkit-scrollbar {
 
 
 
-
-
-
   @keyframes fadeInUp {
     from {
       opacity: 0;
-      transform: translateY(50px); /* Felfelé elmozdítás */
+      transform: translateY(50px);
     }
     to {
       opacity: 1;
-      transform: translateY(0); /* Vissza az eredeti helyzetbe */
+      transform: translateY(0); 
     }
   }
-  
 
  @media only screen and (max-width: 1070px) {
   .about {
