--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@ html {
     display: flex;
     flex-direction: column;
     align-items: center;
+    gap: 25px;
 }
 
 body {
@@ -96,37 +97,6 @@ body::-webkit-scrollbar {
 }
 
 
-.icons {
-  position: absolute;
-  left: 20px;
-  display: flex;
-  gap: 20px;
-  cursor: pointer;
-}
-
-.icons a {
-    border: 1px solid white;
-    padding: 3px;
-    color: white;
-    background-color: #131515;
-    border-radius: 5px;
-    display: inline-block;
-    position: relative;
-}
-
-
-.icons a:hover {
-    color: black;
-    background-color: white;
-}
-
-.icon {
-    display: inline-block;
-    font-size: 20px;
-}
-
-
-
 .navbar-toggle {
     display: none;
     cursor: pointer;
@@ -175,7 +145,6 @@ body::-webkit-scrollbar {
 .about {
     width: 100%;
     height: 100vh;
-    border-top: 1px solid #131515;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -202,13 +171,12 @@ body::-webkit-scrollbar {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    border-top: 1px solid #131515;
     font-size: 24px;
 }
 
  .main {
   position: absolute;
-  top: 25px;
+  top: 0px;
   text-decoration: underline;
 }
 
@@ -237,9 +205,10 @@ body::-webkit-scrollbar {
     justify-content: center;
     flex-direction: column;
     position: relative;
+    gap:20px
 }
 .softskills li {
-  font-size: 22px;
+  font-size: 20px;
   margin-bottom: 8px;
   padding: 10px;
   border-radius: 5px;
@@ -307,9 +276,81 @@ body::-webkit-scrollbar {
 
 
 .projects {
-    width: 100%;
-    height: 50vh;
-    border-top: 1px solid #131515;
+  position: relative;
+    width: 100vw;
+    height: 100vh;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+
+.projects p {
+  position: absolute;
+  top: 0;
+}
+
+.project {
+  max-width: 500px;
+  width: 100%;
+  max-height: 300px;
+  height: 100%;
+  background-color: white;
+}
+
+.footer {
+  width: 100%;
+  height: 110px;
+  max-height: fit-content;
+  background-color: #252422;
+  color: #faf9f9;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  flex-wrap: wrap;
+  padding: 20px;
+
+}
+.footer a {
+  color: white;
+  text-decoration: none;
+  border-radius: 5px;
+  border: none;
+  padding: 10px 20px;
+  background-color: #3f37c9;
+  transition: background-color 0.3s ease;
+}
+
+.footer a:hover {
+  background-color: rgb(2, 41, 79);
+}
+
+
+.icons {
+  display: flex;
+  gap: 20px;
+  cursor: pointer;
+}
+
+.icons a {
+    border: 1px solid white;
+    padding: 3px;
+    color: white;
+    background-color: #131515;
+    border-radius: 5px;
+    display: inline-block;
+    position: relative;
+}
+
+
+.icons a:hover {
+    color: black;
+    background-color: white;
+}
+
+.icon {
+    display: inline-block;
+    font-size: 20px;
 }
 
 
