--- a/src/index.css
+++ b/src/index.css
@@ -285,7 +285,7 @@ body::-webkit-scrollbar {
     flex-wrap: wrap;
 }
 
-.projects p {
+div.projects > p {
   position: absolute;
   top: 0;
 }
@@ -296,6 +296,7 @@ body::-webkit-scrollbar {
   max-height: 300px;
   height: 100%;
   background-color: white;
+  margin: 30px;
 }
 
 .footer {
