--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,8 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: inherit;		
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  font-family: inherit;
+  box-sizing: border-box;
 }
 
 html {
@@ -10,48 +10,48 @@ html {
 }
 
 #root {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    gap: 25px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 25px;
 }
 
 body {
-    width: 100%;
-    height: 100%;
-    background-image: url(/bcg-i.jpg);
+  width: 100%;
+  height: 100%;
+  background-image: url(/bcg-i.jpg);
 }
 
 body::-webkit-scrollbar {
-    width: 0;
-  }
+  width: 0;
+}
 
 .content {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: column;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 }
 
 .home p {
-    text-transform: uppercase;
-    text-align: center;
-    font-size: 76px;
-    letter-spacing: 2px; 
-    animation: fadeInUp 5s ease forwards;
-    line-height: 0.8;
-    letter-spacing: 15px;
-    text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
+  text-transform: uppercase;
+  text-align: center;
+  font-size: 85px;
+  letter-spacing: 2px;
+  animation: fadeInUp 5s ease forwards;
+  line-height: 0.8;
+  letter-spacing: 15px;
+  text-shadow: 2px 2px 2px rgba(0, 0, 0, 0.5);
 }
 
 .home {
-    width: 100%;
-    height: 100vh;
-    text-align: center; 
-    padding: 200px 0;
-    font-family: "Titillium Web", sans-serif;
-    font-weight: 900;
-    color: rgb(2, 41, 79) ;
+  width: 100%;
+  height: 100vh;
+  text-align: center;
+  padding: 200px 0;
+  font-family: "Titillium Web", sans-serif;
+  font-weight: 900;
+  color: rgb(2, 41, 79);
 }
 
 #name {
@@ -64,148 +64,148 @@ body::-webkit-scrollbar {
 }
 
 .navbar {
-    display: flex;
-    width: 100vw;
-    height: 60px;
-    background-color: #131515;
-    justify-content: center;
-    color: #faf9f9;
-    align-items:center;
-    position: sticky;
-    gap: 100px;
-    top: 0;
-    z-index: 99;
-    border-bottom: 2px solid white;
+  display: flex;
+  width: 100vw;
+  height: 60px;
+  background-color: #131515;
+  justify-content: center;
+  color: #faf9f9;
+  align-items: center;
+  position: sticky;
+  gap: 100px;
+  top: 0;
+  z-index: 99;
+  border-bottom: 2px solid white;
 }
 
 .navbar a {
-    color: #faf9f9;
-    background:none;
-    border:none;
-    cursor: pointer;
-    font-size: 20px;
-    display: flex;
-    transition: background-color 0.3s ease;
-    padding: 10px 20px;
-    border-radius: 5px;
+  color: #faf9f9;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 20px;
+  display: flex;
+  transition: background-color 0.3s ease;
+  padding: 10px 20px;
+  border-radius: 5px;
 }
 
 .navbar a:hover {
-    background-color: rgb(2, 41, 79);
-    text-decoration: underline;
-    text-underline-offset: 5px;
+  background-color: rgb(2, 41, 79);
+  text-decoration: underline;
+  text-underline-offset: 5px;
 }
 
-
 .navbar-toggle {
-    display: none;
-    cursor: pointer;
-    flex-direction: column;
-    justify-content: space-between;
-    width: 30px;
-    height: 20px;
-  }
+  display: none;
+  cursor: pointer;
+  flex-direction: column;
+  justify-content: space-between;
+  width: 30px;
+  height: 20px;
+}
 
-  ul {
-    list-style-type: none;
-  }
-  
-  .bar {
-    width: 100%;
-    height: 3px;
-    background-color: #fff;
-  }
+ul {
+  list-style-type: none;
+}
 
-  .toggle-menu {
-    position: absolute;
-    display: flex;
-    width: 100%;
-    height: 400px;
-    flex-direction: column;
-    background-color: rgba(0, 0, 0, 0.8);
-    justify-content: center;
-    align-items: center;
-    top: 50px;
-  }
+.bar {
+  width: 100%;
+  height: 3px;
+  background-color: #fff;
+}
 
-  .toggle-menu li {
-    cursor: pointer;
-    padding: 10px;
-    text-align: center;
-    border-radius: 5px;
-    margin-bottom: 20px;
-  }
+.toggle-menu {
+  position: absolute;
+  display: flex;
+  width: 100%;
+  height: 400px;
+  flex-direction: column;
+  background-color: rgba(0, 0, 0, 0.8);
+  justify-content: center;
+  align-items: center;
+  top: 50px;
+}
 
+.toggle-menu li {
+  cursor: pointer;
+  padding: 10px;
+  text-align: center;
+  border-radius: 5px;
+  margin-bottom: 20px;
+}
 
-  .about img {
-    max-width: 100%;
-    max-height: 300px;
+.about img {
+  max-width: 300px;
+  width: 100%;
+  max-height: 300px;
+  height: 100%;
+  object-fit: cover;
 }
 
 .about {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: relative;
-    gap: 100px;
-    flex-wrap: wrap;
-    
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  gap: 100px;
+  flex-wrap: wrap;
 }
 
 .about-text {
   font-size: 22px;
   line-height: 1.8;
   margin-left: 50px;
-  padding: 20px; 
+  padding: 20px;
   width: 80%;
   max-width: 700px;
   font-weight: 500;
 }
 
-
 .skills {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    font-size: 24px;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  font-size: 24px;
 }
 
- .main {
+.main {
   position: absolute;
   top: 0px;
   text-decoration: underline;
+  color: rgb(2, 41, 79);
 }
 
-
- .hardskills {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-    gap: 20px;
-    padding-left: 30px;
+.hardskills {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  gap: 20px;
+  padding-left: 20px;
 }
 
- .hardskills ul {
+.hardskills ul {
   height: 200px;
 }
 
- .softskills {
-    width: 100%;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-direction: column;
-    position: relative;
-    gap:20px
+.softskills {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  position: relative;
+  gap: 20px;
+  padding-left: 20px;
 }
 .softskills li {
   font-size: 20px;
@@ -221,10 +221,9 @@ body::-webkit-scrollbar {
   background-color: #c4e6f7;
 }
 
- .softskills ul {
+.softskills ul {
   list-style-type: disc;
 }
-
 
 .skill {
   display: inline-block;
@@ -249,69 +248,118 @@ body::-webkit-scrollbar {
   font-size: 10px;
 }
 .skill svg {
- font-size: 60px;
+  font-size: 60px;
 }
 
-#skill-0 svg{
+#skill-0 svg {
   color: #e71d36;
 }
-#skill-1 svg{
+#skill-1 svg {
   color: #0466c8;
 }
-#skill-2 svg{
+#skill-2 svg {
   color: #fee440;
 }
-#skill-3 svg{
+#skill-3 svg {
   color: #00bbf9;
 }
-#skill-5 svg{
+#skill-5 svg {
   color: #ff5400;
 }
-#skill-6 svg{
+#skill-6 svg {
   color: #ffd500;
 }
-#skill-7 svg{
+#skill-7 svg {
   color: #0466c8;
 }
-
 
 .projects {
   position: relative;
-    width: 100vw;
-    height: 100vh;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    flex-wrap: wrap;
+  width: 100vw;
+  height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-wrap: wrap;
 }
 
-div.projects > p {
+.projects > h2 {
   position: absolute;
   top: 0;
+  text-decoration: underline;
+  color: rgb(2, 41, 79);
+  font-size: 32px;
 }
 
 .project {
-  max-width: 500px;
+  max-width: 650px;
   width: 100%;
-  max-height: 300px;
-  height: 100%;
+  max-height: 400px;
   background-color: white;
   margin: 30px;
+  margin-bottom: 0;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid black;
+  transition: transform 0.3s ease;
+}
+
+.project #image-link {
+  width: 100%;
+}
+.project #image-link:hover {
+  border-bottom: 5px solid rgb(2, 41, 79);
+}
+
+.project:hover {
+  transform: translateY(-5px);
+  transform: scale(1.05);
+}
+
+.project img {
+  max-width: 800px;
+  width: 100%;
+  max-height: 200px;
+  height: 100%;
+}
+
+.project #button {
+  text-decoration: none;
+  border-radius: 5px;
+  border: none;
+  background-color: #003f88;
+  padding: 10px 20px;
+  color: white;
+}
+
+.project #button:hover {
+  background-color: rgb(2, 41, 79);
+}
+
+.project-desc {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+  align-items: center;
+  padding: 10px;
+  background-color: #bde0fe;
+  width: 100%;
 }
 
 .footer {
   width: 100%;
-  height: 110px;
-  max-height: fit-content;
+  height: fit-content;
+  padding: 25px;
   background-color: #252422;
   color: #faf9f9;
   display: flex;
   justify-content: space-around;
   align-items: center;
   flex-wrap: wrap;
-  padding: 20px;
-
+  gap: 5px;
 }
+
 .footer a {
   color: white;
   text-decoration: none;
@@ -326,7 +374,6 @@ div.projects > p {
   background-color: rgb(2, 41, 79);
 }
 
-
 .icons {
   display: flex;
   gap: 20px;
@@ -334,62 +381,58 @@ div.projects > p {
 }
 
 .icons a {
-    border: 1px solid white;
-    padding: 3px;
-    color: white;
-    background-color: #131515;
-    border-radius: 5px;
-    display: inline-block;
-    position: relative;
+  border: 1px solid white;
+  padding: 3px;
+  color: white;
+  background-color: #131515;
+  border-radius: 5px;
+  display: inline-block;
+  position: relative;
 }
 
-
 .icons a:hover {
-    color: black;
-    background-color: white;
+  color: black;
+  background-color: white;
 }
 
 .icon {
-    display: inline-block;
-    font-size: 20px;
+  display: inline-block;
+  font-size: 20px;
 }
 
-
 @media only screen and (max-width: 1040px) {
-    .navbar a {
-      display: none; /* Menü alapértelmezett rejtése kisebb képernyőméretnél */
-    }
-   
-    .navbar .icons a {
-      display: inline-block;
-     font-size: 20px;
-    }
-  
-    .navbar-toggle {
-      display: flex; 
-      position: absolute;
-      right: 15px;
-    }
-
-    .toggle-menu a {
-      display: block;
-    } 
+  .navbar a {
+    display: none; /* Menü alapértelmezett rejtése kisebb képernyőméretnél */
   }
 
-
-
-  @keyframes fadeInUp {
-    from {
-      opacity: 0;
-      transform: translateY(50px);
-    }
-    to {
-      opacity: 1;
-      transform: translateY(0); 
-    }
+  .navbar .icons a {
+    display: inline-block;
+    font-size: 20px;
   }
 
- @media only screen and (max-width: 1070px) {
+  .navbar-toggle {
+    display: flex;
+    position: absolute;
+    right: 15px;
+  }
+
+  .toggle-menu a {
+    display: block;
+  }
+}
+
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    transform: translateY(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@media only screen and (max-width: 1070px) {
   .about {
     display: flex;
     flex-direction: column;
@@ -401,38 +444,35 @@ div.projects > p {
   .hardskills {
     gap: 90px;
   }
+}
+
+@media only screen and (max-width: 560px) {
+  .skill {
+    width: 60px;
+    height: 60px;
   }
 
-  @media only screen and (max-width: 560px) {
-    .skill {
-      width:60px;
-      height: 60px;
-    }
-
-    .home p {
-      font-size: 50px;
-    }
-    #name {
-      font-size: 25px;
-    }
-
-    .about-text {
-      font-size: 18px;
-    }
-    .softskills li {
-      font-size: 15px;
-      padding: 7px;
-  
-    }
+  .home p {
+    font-size: 50px;
+  }
+  #name {
+    font-size: 25px;
   }
 
-
-  @media only screen and (max-width: 390px) {
-    .home p {
-      font-size: 40px;
-    }
-    #name {
-      font-size: 20px;
-    }
-
+  .about-text {
+    font-size: 18px;
   }
+  .softskills li {
+    font-size: 15px;
+    padding: 7px;
+  }
+}
+
+@media only screen and (max-width: 390px) {
+  .home p {
+    font-size: 40px;
+  }
+  #name {
+    font-size: 20px;
+  }
+}
