--- a/src/index.css
+++ b/src/index.css
@@ -46,7 +46,7 @@ body::-webkit-scrollbar {
 
 .home {
   width: 100%;
-  height: 100vh;
+  height: 90vh;
   text-align: center;
   padding: 200px 0;
   font-family: "Titillium Web", sans-serif;
@@ -159,7 +159,6 @@ ul {
   font-size: 22px;
   line-height: 1.8;
   margin-left: 50px;
-  padding: 20px;
   padding-bottom: 70px;
   width: 80%;
   max-width: 700px;
@@ -475,6 +474,10 @@ ul {
   .hardskills {
     gap: 90px;
   }
+  .about-text {
+    margin: 10px;
+  }
+
 }
 
 @media only screen and (max-width: 560px) {
