--- a/src/index.css
+++ b/src/index.css
@@ -301,7 +301,7 @@ ul {
 
 .projects {
   position: relative;
-  width: 100vw;
+  width: 100%;
   height: 100vh;
   display: flex;
   align-items: center;
@@ -331,9 +331,6 @@ ul {
   transition: transform 0.3s ease;
 }
 
-.projects > div:nth-child(2) {
-  margin-top: 40px;
-}
 
 .project #image-link {
   width: 100%;
@@ -504,6 +501,17 @@ ul {
   width: 100%;
   max-height: 200px;
   height: 100%;
+  }
+
+  .project {
+  max-width: 500px;
+  width: 100%;
+  max-height: 280px;
+  border: none;
+  }
+
+  .projects {
+    gap: 25px;
   }
 }
 
