--- a/src/index.css
+++ b/src/index.css
@@ -203,7 +203,7 @@ ul {
 
 .main {
   position: absolute;
-  top: 10px;
+  top: 5px;
   text-decoration: underline;
   color: rgb(2, 41, 79);
 }
@@ -304,14 +304,14 @@ ul {
   width: 100%;
   height: 100vh;
   display: flex;
-  align-items: center;
-  justify-content: center;
+  align-items:center;
+  justify-content:center;
   flex-wrap: wrap;
 }
 
 .projects > h2 {
   position: absolute;
-  top: 0;
+  top: -20px;
   text-decoration: underline;
   color: rgb(2, 41, 79);
   font-size: 32px;
@@ -356,7 +356,7 @@ ul {
   border-radius: 5px;
   border: none;
   background-color: #003f88;
-  padding: 10px 20px;
+  padding: 10px;
   color: white;
 }
 
@@ -367,9 +367,10 @@ ul {
 .project-desc {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 5px;
   align-items: center;
-  padding: 10px;
+  justify-content: center;
+  padding: 5x;
   background-color: #bde0fe;
   width: 100%;
 }
@@ -402,7 +403,7 @@ ul {
 
 .icons {
   display: flex;
-  gap: 20px;
+  gap: 10px;
   cursor: pointer;
 }
 
@@ -521,6 +522,12 @@ ul {
   }
   #name {
     font-size: 20px;
+  }
+  .project img {
+    max-width: 600px;
+    width: 100%;
+    max-height: 150px;
+    height: 100%;
   }
 }
 
